manifests/dy-static-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dy-static-web
  namespace: xinfa
  labels:
    app: dy-static-web
    tier: frontend
spec:
  selector:
    matchLabels:
      app: dy-static-web
      tier: frontend
  template:
    metadata:
      labels:
        app: dy-static-web
        tier: frontend
    spec:
      containers:
        - name: dy-static-web
          image: git.caspen-tech.com:5050/jolly88-complex/frontend:dy-static-web-1687414498 # {"$imagepolicy": "xinfa:dy-static-web"}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - dy-static-web
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: gitlab-registry
